Change text and fix style of options page

--- a/src/options/options.css
+++ b/src/options/options.css
@@ -1,6 +1,9 @@
 @import "/common/modules/AutomaticSettings/css/photonOptions.css";
 
+.line > code {
+  margin: 0;
+}
+
 .float-image {
   margin: 10px;
 }
-
